libvlc_media_new_path fails with "Not enough memory" for incorrect path
If I call libvlc_media_new_path with incorrect path like "D:\file.mp4", it returns NULL and sets error to "Not enough memory". Tested on VLC 2.1.3
If I call libvlc_media_new_path with incorrect path like "D:\file.mp4", it returns NULL and sets error to "Not enough memory". Tested on VLC 2.1.3
assigned to @Courmisch
added Component::Bindings: LibVLC (native API) label
added Status::fixed label
changed milestone to %2.2.0
closed
commit 345afa86 Author: Rémi Denis-Courmont remi@remlab.net Date: Wed Feb 26 18:24:10 2014 +0200
libvlc_media_new_path: set more meaningful error message (fixes [#10792](https://code.videolan.org/videolan/vlc/-/issues/10792))
Original author: remi@remlab.net
commit 74167c1e Author: Rémi Denis-Courmont remi@remlab.net Date: Wed Feb 26 18:22:43 2014 +0200
vlc_path2ri: set errno to disthinguish errors (refs [#10792](https://code.videolan.org/videolan/vlc/-/issues/10792))
Original author: remi@remlab.net
VideoLAN code repository instance