vlc_path2ri: set errno to disthinguish errors (refs #10792)